@@ -4,7 +4,7 @@
 		<title>ManPageEditorQT</title>
 	</head>
 	<body vlink="#551A8B" text="#000000" bgcolor="#cccccc" alink="#EE0000" link="#0000EE">
-		<div align="center"><span style="font-size:64px;"><b>Man Page Editor</b></span></div>
+		<div align="center"><span style="font-size:64px;"><b>Manpage Editor QT</b></span></div>
 		<hr width=100% size="2">
 		<div align="center">
 			<img src="mainwindow.png" alt="mainwindow.png" title="mainwindow"><br>
